cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(addresstable)

# add_executable(map map.cc)
#
# add_executable(unordered_map unordered_map.cc)
#
# add_executable(lmdb lmdb.cc)
# target_link_libraries(lmdb -llmdb)
#
# add_executable(macro macro.cc)
#
# add_executable(dlopen dlopen.cc)
# target_link_libraries(dlopen -ldl)
#
# add_executable(variable variable.cc)

add_executable(struct struct.cc)

# add_executable(ministruct ministruct.cc)

# add_executable(test_register test_register.cc)
